Installation über github funktioniert nun

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-encoding//src/help/de_de/name.aiteanu.docmanager.gui.view.AccountList.txt=ISO-8859-1
-encoding//src/help/de_de/name.aiteanu.docmanager.gui.view.Welcome.txt=ISO-8859-1
+encoding/<project>=ISO-8859-1
+encoding/README.md=UTF-8
