--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="/jameica"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -20,5 +20,9 @@
 	<classpathentry kind="lib" path="/hibiscus.scripting.htmlunit/lib/commons-io/commons-io-2.15.0.jar"/>
 	<classpathentry kind="lib" path="/hibiscus.scripting.htmlunit/lib/org.apache.commons/commons-lang3-3.13.0.jar"/>
 	<classpathentry kind="lib" path="/hibiscus.scripting.htmlunit/lib/org.htmlunit/htmlunit-3.7.0.jar"/>
+	<classpathentry kind="lib" path="/hibiscus/lib/jackson/jackson-core-2.14.1.jar"/>
+	<classpathentry kind="lib" path="/hibiscus/lib/jackson/jackson-databind-2.14.1.jar"/>
+	<classpathentry kind="lib" path="/hibiscus/lib/apache_httpclient/httpclient5-5.2.jar"/>
+	<classpathentry kind="lib" path="/hibiscus/lib/apache_httpclient/httpcore5-5.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
